* Fix display too high.

--- a/src/less/func.less
+++ b/src/less/func.less
@@ -124,216 +124,3 @@ function
         }
     }
 }
-
-//p 元素高度占位 用于移动设备
-.make-line-and-height-p(@number) {
-    height: unit(@number/@base-px-2-rem, rem);
-    line-height: unit(@number/@base-px-2-rem, rem);
-}
-
-//p 元素高度占位 用于移动设备
-.make-big-img-p(@big-banner-text-height) {
-    >p {
-        width: 100%;
-        // height: unit(100/@base-px-2-rem, rem);
-        // line-height: unit(100/@base-px-2-rem, rem);
-        .make-line-and-height-p(@big-banner-text-height);
-        text-align: center;
-        font-size: 15px;
-        background-color: #fff;
-        letter-spacing: 1px;
-        color: #000;
-        font-weight: 500;
-        @media screen and (min-width: 768px) {
-            font-size: 20px;
-            letter-spacing: 2px;
-        }
-    }
-}
-
-//产品专场下的 2X2 商品展示容器 及 布局
-.make-2X2-product-box() {
-    //
-    .product-box-wrapper {
-        width: 100%;
-        padding: unit(20/@base-px-2-rem, rem);
-        >.product-box {
-            display: inline-block;
-            width: 49%;
-            >a {
-                //display: block;
-                //width: 49.5%;
-                text-align: center;
-                >img {
-                    //http://stackoverflow.com/questions/7055393/center-image-using-text-align-center
-                    //fix the img in the block containers
-                    //img is an inline ele
-                    height: unit(360/@base-px-2-rem, rem);
-                    display: block;
-                    margin: 0 auto;
-                }
-                >p {
-                    text-overflow: ellipsis;
-                    line-height: 1.4em;
-                    height: 2.8em;
-                    overflow: hidden;
-                    @media screen and (min-width: 768px) {
-                        font-size: 20px;
-                        letter-spacing: 2px;
-                    }
-                    &+p {
-                        color: red;
-                        font-weight: 600;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.mod-retina-display(@fs, @ls) {
-    p {
-        @media screen and (min-width: 768px) {
-            font-size: @fs;
-            letter-spacing: @ls;
-        }
-    }
-    @media screen and (min-width: 768px) {
-        font-size: @fs;
-        letter-spacing: @ls;
-    }
-}
-
-
-
-.make-text(@fs, @ls) {}
-
-
-/*
-通用单行文字标题栏
-*/
-
-.base-title(@line-arg) when (@line-arg =none) {
-    p.recommend,p.guess-you-like {
-        width: 100%;
-        text-align: center;
-        .make-line-and-height-p(@big-banner-text-height);
-        font-size: 15px;
-        background-color: #fff;
-        letter-spacing: 1px;
-        color: #000;
-        font-weight: 500;
-        .mod-retina-display(20px, 2px);
-    }
-}
-
-
-/*
-容器下的第一个p 两边有线
-*/
-
-.base-title(@line-arg) when (@line-arg =line) {
-    p.recommend,p.guess-you-like {
-        position: relative;
-        width: 100%;
-        text-align: center;
-        .make-line-and-height-p(@big-banner-text-height);
-        font-size: 15px;
-        background-color: #fff;
-        letter-spacing: 1px;
-        color: #000;
-        font-weight: 500;
-        .mod-retina-display(20px, 2px);
-        &:after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 50%;
-            left: 5%;
-            height: 1px;
-            width: 20%;
-            background-color: #aaa;
-        }
-        &:before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 50%;
-            right: 5%;
-            height: 1px;
-            width: 20%;
-            background-color: #aaa;
-        }
-    }
-}
-
-
-/*
-
-创建fixed元素
-*/
-
-
-
-.make-fixed-bar(@height) {
-    position: fixed;
-    z-index: @z-index-nav-search-bar;
-    width: 100%;
-    max-width: @max-width;
-    height: unit(@height/@base-px-2-rem, rem);
-    background-color: #fff;
-}
-
-
-/*布局用容器*/
-
-//左右内边距
-.base-pd-lr-wrapper() {
-    background-color: #fff;
-    padding: 0 unit(@base-pd-lr/@base-px-2-rem, rem);
-}
-//上下内边距
-.base-pd-tb-wrapper() {
-    background-color: #fff;
-    padding: unit(@base-pd-tb/@base-px-2-rem, rem) 0;
-}
-//全内边距
-.base-pd-wrapper() {
-    background-color: #fff;
-    padding: unit(@base-pd-tb/@base-px-2-rem, rem);
-}
-
-//文字超出隐藏省略
-//用于 p 
-
-//需要使用 width: 100%;
-.text-omit() {
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-
-/************************
-
-     flex 布局
-
-************************/
-
-.make-flexBox(){
-    
-}
-
-/************************
-
-     制造圆角
-
-************************/
-.make-border-radius(@px) {
-    border-radius: @px;
-    border-top-left-radius: @px;
-    border-top-right-radius: @px;
-    border-bottom-left-radius: @px;
-    border-bottom-right-radius: @px;
-}
