--- a/src/less/style.less
+++ b/src/less/style.less
@@ -251,124 +251,6 @@ div.swiper-product {
 }
 
 
-/************************
-
-产品Swiper  只有单个商品
-
-************************/
-
-//构造函数
-.no-swiper-product() {
-    width: 100%;
-    a {
-        //padding: 0 unit(50/@base-px-2-rem, rem);
-        padding-right: unit(50/@base-px-2-rem, rem);
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        //http://stackoverflow.com/questions/15381172/css-flexbox-child-height-100
-        //使项目下的所有元素高度100%
-        align-items: stretch;
-        //修复移动端图显示不正常
-    }
-    .product-imgBox {
-        //height: unit(600/@base-px-2-rem, rem);
-        //width: unit(600/@base-px-2-rem, rem);
-        height: 100%;
-        width:100%;
-        img {
-            // height: unit(600/@base-px-2-rem, rem);
-            // width: unit(600/@base-px-2-rem, rem);
-            width: 100%;
-            height: 100%;
-        }
-        &::after {
-            display: none;
-        }
-    }
-    .product-name-price {
-        //该项目主轴为纵向
-        padding: unit(80/@base-px-2-rem, rem) 0;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-        p {
-            &:nth-child(2) {
-                color: @red;
-                span {
-                    font-size: 14px;
-                }
-            }
-        }
-    }
-}
-
-.no-swiper-product {
-    .no-swiper-product();
-}
-
-
-/************************
-
-单个产品展示
-one-product
-商品图占一行
-下面是文字和价格
-single-goods
-左边是商品图
-右边是文字和价格
-
-
-
-************************/
-
-//弃用
-.one-product {
-    padding-bottom: unit(50/@base-px-2-rem, rem);
-    img {
-        width: 100%;
-        border-top: 1px solid @border-color-gray-very-light;
-        //height: unit(630/@base-px-2-rem, rem);
-        // -webkit-transform: scale(1.2,1.2);
-        // transform:  scale(1.2,1.2);
-        padding: 0 unit(100/@base-px-2-rem, rem);
-    }
-    p {
-        padding: 0 unit(50/@base-px-2-rem, rem);
-        font-size: 14px;
-        +p {
-            text-align: right;
-            color: red;
-            font-weight: 600;
-        }
-        @media screen and (min-width: 768px) {
-            font-size: 20px;
-            letter-spacing: 2px;
-        }
-    }
-}
-
-.single-goods {
-    border-top: 1px solid @border-color-gray-very-light;
-    &:last-child {
-        border-bottom: 1px solid @border-color-gray-very-light;
-    }
-    .no-swiper-product();
-}
-
-
-/************************
-
-2X2产品页
-
-************************/
-
-.base-mt-wrapper {
-    .make-2X2-product-box();
-    //have product-box-wrapper 
-}
-
 
 /******************
 
